remove sections not used

--- a/index.html
+++ b/index.html
@@ -214,7 +214,6 @@
                 <div class="product-size-container">
                   <select id="product-container" aria-label="flavours">
                     <option selected value="pineapple">Pineapple</option>
-                    <option value="grape">Grape</option>
                     <option value="strawbewrry">Mango</option>
                     <option value="apple">Apple </option>
                     <option value="orange">Orange </option>
@@ -227,8 +226,6 @@
                     <option value="3">300mg</option>
                     <option value="4">400mg</option>
                     <option value="5">500mg</option>
-                    <option value="6">750mg</option>
-                    <option value="7">1000mg</option>
                   </select> 
                 </div>
                 </p>
@@ -291,12 +288,8 @@
                       <option value="kola">Kola Champagne</option>
                       <option value="grape">Grape</option>
                       <option value="pineapple">Pineapple</option>
-                      <option value="vimto">Vimto</option>
-                      <option value="ribena">Ribena</option>
-                      <option value="irn-bru">Irn-Bru</option>
                       <option value="mango">Mango</option>
                       <option value="s&g">S&G</option>
-                      <option value="forest-fruits">Forest Fruits</option>
                     </select> 
                   </div>
                   <div class="product-quantity-container">  
@@ -441,17 +434,10 @@
                         <em class="fs-3">Selection</em>
                       <div class="product-size-container">
                         <select id="product-container3"aria-label="flavours">
-                            <option value="vodka_&_cranberries">Vodka & Cranberries</option>
                             <option value="dry_roasted">Dry roasted</option>
                             <option value="fruit_&_Nut">Fruit & Nut</option>
-                            <option value="honey_roasted">Honey Roasted</option>
-                            <option value="rum">Rum</option>
                             <option value="rum_&_raisin">Rum & Raisin</option>
-                            <option value="vodka">Vodka</option>
                             <option value="cashews">Cashews</option>
-                            <option value="whiskey">Whiskey</option>
-                            <option value="whiskey_&_fruit">Whiskey & Fruit</option>
-                            <option value="brandy">Brandy</option>
                         </select> 
                       </div>
                       <div class="product-quantity-container">  
@@ -520,11 +506,7 @@
                   <em class="fs-3">Selection</em>
                 <div class="product-size-container">
                   <select id="product-container4"aria-label="flavours">
-                    <option selected value="1">100mg - £9.99</option>
-                    <option value="2">200mg - £19.99</option>
-                    <option value="3">300mg - 24.99</option>
                     <option value="4">500mg - £39.99</option>
-                    <option value="5">1000mg - £59.99</option>
                   </select> 
                 </div>
                 <div class="product-quantity-container">  
@@ -592,11 +574,7 @@
                         <em class="fs-3">Selection</em>
                       <div class="product-size-container">
                         <select id="product-container5"aria-label="flavours">
-                          <option selected value="1">100mg - £14.99</option>
-                          <option value="2">200mg - £29.99</option>
-                          <option value="3">300mg - 34.99</option>
                           <option value="4">500mg - £39.99</option>
-                          <option value="5">1000mg - £69.99</option>
                         </select> 
                       </div>
                       <div class="product-quantity-container">  
@@ -622,7 +600,7 @@
               </section>
                 <!-- honey end -->
                <!-- tinctures start -->
-               <section id="tinctures" class="about bg-black text-light p-3">
+               <!-- <section id="tinctures" class="about bg-black text-light p-3">
                 <div>
                   <a href="https://codesleeps.github.io/solid-octo-enigma/" target="_blank"  aria-label="Enter This Cannabis Quiz">
                     <h2 class="card-body text-center display-3 bg-black fw-normal pb-5"> <em>Tinctures Selection</em></h2>
@@ -648,26 +626,21 @@
                   </div>
                 </div>
               </div>
-            </section>
+            </section> -->
               <!-- tincture card  -->
-            <section class="feco-shots pt-lg-0 pb-1 fs-3 bg-black">
+            <!-- <section class="feco-shots pt-lg-0 pb-1 fs-3 bg-black">
                 <div class="row row-cols-1 row-cols-lg-4 row-cols-md-3 row-cols-sm-2 g-3 mx-1 mb-5">
                 <div class="col">
                   <div class="card h-100 border border-3 border-success">
                     <img src="./app/img/cbd_oils/Tincture_Van_1200mg__65374.webp" class="card-img-top" loading="lazy" width="280" height="400" alt="CBD Tinctures"/>
                     <div class="card-body px-2">
-                      <!-- <h3 class="card-title text-danger">Vimto</h5> -->
                       <p class="card-text text-light">
                         <a href="#exampleModal" type="button" data-mdb-toggle="modal"
                           data-mdb-target="#exampleModal" aria-label="Modal Form">⭐⭐⭐⭐⭐ feedback</a><br>
                         <em class="fs-3">Selection</em>
                       <div class="product-size-container">
                         <select id="product-container6"aria-label="flavours">
-                          <option selected value="1">100mg - £9.99</option>
-                          <option value="2">200mg - £19.99</option>
-                          <option value="3">300mg - 29.99</option>
                           <option value="4">500mg - £34.99</option>
-                          <option value="5">1000mg - £59.99</option>
                         </select> 
                       </div>
                       <div class="product-quantity-container">  
@@ -682,7 +655,6 @@
                         </select> 
                       </div>
                       </p>
-                      <!-- cart button -->
                       <button id="feedbackButtonTinctures" class="button-85" role="button">
                         <a href="https://www.youtube.com/watch?v=-ZhxFtmAoXg" target="_blank" class="text-light" aria-label="Order Button">Order</a>
                       </button>
@@ -690,11 +662,11 @@
                     </div>
                   </div>
                 </div>
-              </section>
+              </section> -->
                 <!-- tincture end -->
 
                <!-- topicals start -->
-         <section id="topicals" class="about bg-black text-light p-3">
+         <!-- <section id="topicals" class="about bg-black text-light p-3">
           <div>
             <a href="https://codesleeps.github.io/solid-octo-enigma/" target="_blank"  aria-label="Enter This Cannabis Quiz">
               <h2 class="card-body text-center display-3 bg-black fw-normal pb-5"> <em>Topicals Selection</em></h2>
@@ -721,25 +693,20 @@
             </div>
           </div>
         </div>
-        </section>
-       <section class="feco-shots pt-lg-0 pb-1 fs-3 bg-black">
+        </section> -->
+       <!-- <section class="feco-shots pt-lg-0 pb-1 fs-3 bg-black">
           <div class="row row-cols-1 row-cols-lg-4 row-cols-md-3 row-cols-sm-2 g-3 mx-1 mb-5">
           <div class="col">
             <div class="card h-100 border border-3 border-success">
               <img src="./app/img/topicals//muscle_rub.webp" loading="lazy" class="card-img-top" width="300" height="300" alt="CBD Muscle Rub" />
               <div class="card-body px-2">
-                <!-- <h3 class="card-title text-danger">Vimto</h5> -->
                 <p class="card-text text-light">
                   <a href="#exampleModal" type="button" data-mdb-toggle="modal"
                     data-mdb-target="#exampleModal" aria-label="Modal Form">⭐⭐⭐⭐⭐ feedback</a><br>
                   <em class="fs-3">Selection</em>
                 <div class="product-size-container">
                   <select id="product-container7"aria-label="flavours">
-                    <option selected value="1">100mg - £9.99</option>
-                    <option value="2">200mg - £19.99</option>
-                    <option value="3">300mg - 24.99</option>
                     <option value="4">500mg - £39.99</option>
-                    <option value="5">1000mg - £59.99</option>
                   </select> 
                 </div>
                 <div class="product-quantity-container">  
@@ -754,7 +721,6 @@
                   </select> 
                 </div>
                 </p>
-                <!-- cart button -->
                 <button id="feedbackButtontopicals" class="button-85" role="button">
                   <a href="https://www.youtube.com/watch?v=-ZhxFtmAoXg" target="_blank" class="text-light" aria-label="Order Button">Order</a>
                 </button>
@@ -762,10 +728,10 @@
               </div>
             </div>
           </div>
-        </section>
+        </section> -->
           <!-- topicals end -->
                <!-- vapes start -->
-               <section id="vapes" class="about bg-black text-light p-3">
+               <!-- <section id="vapes" class="about bg-black text-light p-3">
                 <div>
                   <a href="https://codesleeps.github.io/solid-octo-enigma/" target="_blank"  aria-label="Enter This Cannabis Quiz">
                     <h2 class="card-body text-center display-3 bg-black fw-normal pb-5"> <em>Vapes Selection</em></h2>
@@ -805,11 +771,7 @@
                         <em class="fs-3">Selection</em>
                       <div class="product-size-container">
                         <select id="product-container8"aria-label="flavours">
-                          <option selected value="1">100ml - £14.99</option>
-                          <option value="2">200ml - £29.99</option>
-                          <option value="3">300ml - 34.99</option>
                           <option value="4">500ml - £45.99</option>
-                          <option value="5">1000ml - £65.99</option>
                         </select> 
                       </div>
                       <div class="product-quantity-container">  
@@ -823,16 +785,16 @@
                           <option value="7">7</option>
                         </select> 
                       </div>
-                      </p>
+                      </p> -->
                       <!-- cart button -->
-                      <button id="feedbackButtonVapes" class="button-85" role="button">
+                      <!-- <button id="feedbackButtonVapes" class="button-85" role="button">
                         <a href="https://www.youtube.com/watch?v=-ZhxFtmAoXg" target="_blank" class="text-light" aria-label="Order Button">Order</a>
                       </button>
                       </a>
                     </div>
                   </div>
                 </div>
-              </section>
+              </section> -->
                 <!-- vapes end -->
                                
 
