Update copyright year from 2023 to 2026

--- a/index.html
+++ b/index.html
@@ -948,6 +948,9 @@
                   class="text-reset" aria-label="Read more about how to decarboxylate">Decarbing</a>
               </p>
               <p>
+                <a href="https://www.youtube.com/watch?v=huzhPzLwGz0" target="_blank" class="text-reset" aria-label="Watch cannabis comedy movie">Movie</a>
+              </p>
+              <p>
                 <a href="https://jcyounger.com/5-most-common-cannabis-extraction-methods-in-2020/" target="_blank" class="text-reset" aria-label="Read more about extraction methods">Extraction</a>
               </p>
               <p>
@@ -986,7 +989,7 @@
 
       <!-- Copyright -->
       <div class="text-center p-4 text-light">
-        © 2023 Copyright Club Feco
+        © 2026 Copyright Club Feco
 
       </div>
       <!-- Copyright -->
